Revert "Fix block alignment for communication template"
This reverts commit d17a7578a6cfad30fb599b6f0bb11c2ace50a789.

--- a/themes/shiro/assets/src/sass/blocks/_core-column.scss
+++ b/themes/shiro/assets/src/sass/blocks/_core-column.scss
@@ -1,9 +1,7 @@
 .wp-block-column {
 	> .contact:only-child,
 	> .wp-block-group:only-child,
-	> .wp-block-group:only-child .wp-block-group__inner-container,
-	> form[action*=subscribe]:only-child,
-	> form[action*=subscribe]:only-child > .mailchimp-subscribe {
+	> .wp-block-group:only-child .wp-block-group__inner-container {
 		height: 100%;
 	}
 
